fix(sticker): improve GSAP tween management and enhance expand/collapse animations

--- a/src/components/sticker/sticker.module.css
+++ b/src/components/sticker/sticker.module.css
@@ -5,6 +5,7 @@
   width: 150px;
   cursor: pointer;
   transform-origin: center;
+  will-change: transform;
 }
 
 @media screen and (min-width: 90em) {
@@ -67,7 +68,13 @@
   transform-origin: center center;
 }
 
+[data-expanded="true"] .sticker-link,
 [data-expanded="true"] .sticker-link:hover,
 [data-expanded="true"] .sticker-link:focus {
   transform: scale(1);
+  filter: drop-shadow(4px 0px 0 white) 
+          drop-shadow(-4px 0px 0 white)
+          drop-shadow(0px 4px 0 white)
+          drop-shadow(0px -4px 0 white)
+          drop-shadow(0px 0px 16px rgb(0, 0, 0, 0.2)) !important;
 }
